Fix issues with spacing in canvas and macOS color scheme

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3671,6 +3671,12 @@ body:not(.full-file-names) .tree-item-inner {
 .canvas-node-container {
   border: 1.5px solid var(--background-modifier-border-focus); }
 
+.node-insert-event.mod-inside-iframe {
+  --max-width: 100%;
+  --folding-offset: 0px; }
+  .node-insert-event.mod-inside-iframe .cm-editor .cm-content {
+    padding-top: 0; }
+
 /* File browser */
 .is-mobile .nav-folder.mod-root > .nav-folder-title .nav-folder-title-content {
   display: none; }
@@ -5731,7 +5737,7 @@ body.theme-light {
 .theme-light.minimal-macos-light {
   --color-red-rgb: 255,59,49;
   --color-orange-rgb: 255,149,2;
-  --color-yellow-rgb: 255,204,209;
+  --color-yellow-rgb: 255,204,0;
   --color-green-rgb: 42,205,65;
   --color-cyan-rgb: 2,199,190;
   --color-blue-rgb: 2,122,255;
