--- a/src/scss/color-schemes/macos.scss
+++ b/src/scss/color-schemes/macos.scss
@@ -4,7 +4,7 @@
 .theme-light.minimal-macos-light {
 	--color-red-rgb: 255,59,49;
 	--color-orange-rgb: 255,149,2;
-	--color-yellow-rgb: 255,204,209;
+	--color-yellow-rgb: 255,204,0;
 	--color-green-rgb: 42,205,65;
 	--color-cyan-rgb: 2,199,190;
 	--color-blue-rgb: 2,122,255;
